# sciencebook

./: Dockerfile  Makefile  docker-compose.yml
backend/: pyproject.toml  windschatten.py
frontend/: Dockerfile  Makefile  app.vue  cypress.config.js  docker-compose.yml  nuxt.config.ts  package.json  tailwind.config.js  vitest.config.js
frontend/components/: chatbar.vue  drawer.vue  navbar.vue  page.vue  toast.vue
frontend/components/charts/: 3DBar.vue  PieChart.vue
frontend/composables/: toast.ts
frontend/cypress/e2e/: spec.cy.js
frontend/middleware/: auth.ts
frontend/pages/: carl.vue  example.vue  index.vue  login.vue  notebook.vue  timeline.vue  wordcloud.vue
frontend/plugins/: quilleditor.js
frontend/stores/: chatStore.ts  pageStore.ts  themeStore.ts
frontend/tests/: toast.spec.ts
