[tool.poetry]
name = "windschatten-py"
version = "0.1.0"
description = ""
authors = ["André Glatzl <andre.glatzl@fhgr.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
asyncio = "^3.4.3"
aiortc = "^1.7.0"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
